--- a/_config.yaml
+++ b/_config.yaml
@@ -1,4 +1,5 @@
 #has to be done this way due to a bug: https://github.com/jekyll/jekyll/issues/1352
 include:
-  - "_framework"
-  - "sample-data"
+  - _framework
+  - sample-data
+  - css
